--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div>
         <h1>Javascript</h1>
     </div>
-    <script src="./app.js"></script>
+    <!-- <script src="./app.js"></script> -->
+    <script src="./arrays.js"></script>
 </body>
 </html>
