--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <h1>Javascript</h1>
     </div>
     <!-- <script src="./app.js"></script> -->
-    <script src="./arrays.js"></script>
+    <!-- <script src="./arrays.js"></script> -->
+    <!-- <script src="functions.js"></script> -->
+    <script src="callbacks.js"></script>
 </body>
 </html>
